--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,5 @@
 nav{
-    background-color: rgba(0, 0, 0, 0.53);
+    background-color: rgba(250 ,250 ,250 ,.5);
     width: 100%;
     height: 50px;
 
@@ -7,6 +7,7 @@ nav{
 
 ul{
     display: flex;
+    flex-flow: row;
     text-decoration: none;
     list-style: none;
     text-align: center;
@@ -16,10 +17,16 @@ ul{
 }
 
 li{
+    flex: 1;
     margin: 12px 0 0 0;
     text-decoration: none;
     list-style: none;
     text-align: center;
     font-family: 'Oswald', sans-serif;
     
+}
+
+body{
+    background-color: black;
+
 }
